#update_add_apartment_and_design_page_add_apartment